test/corpus/00-types-numbers-float.txt
===============================================================================
types: numbers, float
===============================================================================
{
    float = 1400.01467843;
}
-------------------------------------------------------------------------------
(document
  (field
    (identifier)
    (element
      (number))))
