test/corpus/00-types-string-escape-cr.txt
===============================================================================
types: string, escaped carriage-return
===============================================================================
{
    name = "\rWill\r";
}
-------------------------------------------------------------------------------
(document
  (field
    (identifier)
    (element
      (string))))
