test/corpus/00-types-string-escape-lf.txt
===============================================================================
types: string, escaped line-feeds
===============================================================================
{
    name = "\n\nWill\n\n";
}
-------------------------------------------------------------------------------
(document
  (field
    (identifier)
    (element
      (string))))
