test/corpus/00-types-string-escape-lfcr.txt
===============================================================================
types: string, escaped line-feed -> carriage-returns
===============================================================================
{
    name = "\n\rWill\n\r";
}
-------------------------------------------------------------------------------
(document
  (field
    (identifier)
    (element
      (string))))
