test/corpus/00-types-string-escaped-quotes.txt
===============================================================================
types: string, escaped quotes
===============================================================================
{
    name = "\"Will\"";
    height = "6\'2\"";
}
-------------------------------------------------------------------------------
(document
  (field
    (identifier)
    (element
      (string)))
  (field
    (identifier)
    (element
      (string))))
