test/corpus/comment.txt
===============================================================================
comment: regular
===============================================================================
{ # foo
    name = "Will"; # bar
    # buzz
}
-------------------------------------------------------------------------------
(document
  (comment)
  (field
    (identifier)
    (assignment)
    (element
      (string))
    (termination))
    (comment)
    (comment))
