test/corpus/number-float-negative.txt
===============================================================================
type(number): negative float
===============================================================================
{
    negative-float = -1400.01467843;
}
-------------------------------------------------------------------------------
(document
  (field
    (identifier)
    (assignment)
    (element
      (negatedElement
        (negation)
        (element
          (number))))
    (termination)))
