test/corpus/numbers-float-signed.txt
===============================================================================
types: numbers, signed float
===============================================================================
{
    signedfloat = -1400.12458919274;
}
-------------------------------------------------------------------------------
(document
  (field
    (identifier)
    (element
      (number))))
