test/corpus/numbers-int-signed.txt
===============================================================================
types: numbers, signed integer
===============================================================================
{
    signedinteger = -1400;
}
-------------------------------------------------------------------------------
(document
  (field
    (identifier)
    (element
      (number))))
