test/corpus/numbers-int.txt
===============================================================================
types: numbers, integer
===============================================================================
{
    integer = 1400;
}
-------------------------------------------------------------------------------
(document
  (field
    (identifier)
    (element
      (number))))
