test/corpus/string-escape-crlf.txt
===============================================================================
types: string, escaped carriage-return -> line-feeds
===============================================================================
{
    name = "\r\nWill\r\n";
}
-------------------------------------------------------------------------------
(document
  (field
    (identifier)
    (element
      (string))))
