test/corpus/string.txt
===============================================================================
types: strings
===============================================================================
{
    name = "Will";
}
-------------------------------------------------------------------------------
(document
  (field
    (identifier)
    (element
      (string))))
