test/corpus/type-bool-false.txt
===============================================================================
type(boolean): false
===============================================================================
{
    no = false;
}
-------------------------------------------------------------------------------
(document
  (field
    (identifier)
    (assignment)
    (element
      (bool))
    (termination)))
