test/corpus/type-bool-true.txt
===============================================================================
type(boolean): true
===============================================================================
{
    yes = true;
}
-------------------------------------------------------------------------------
(document
  (field
    (identifier)
    (assignment)
    (element
      (bool))
    (termination)))
