test/corpus/type-null.txt
===============================================================================
type(null)
===============================================================================
{
    nothing = null;
}
-------------------------------------------------------------------------------
(document
  (field
    (identifier)
    (assignment)
    (element
      (null))
    (termination)))
