test/corpus/type-number-exponent-leading-decimal-uppercase-negated.txt
===============================================================================
type(number): negated uppercase exponents with leading decimal
===============================================================================
{
    decimal-exp = -.5E10;
    decimal-negative-exp = -.123E-5;
}
-------------------------------------------------------------------------------
(document
  (field
    (identifier)
    (assignment)
    (element
      (negatedElement
        (negation)
        (element
          (number))))
    (termination))
  (field
    (identifier)
    (assignment)
    (element
      (negatedElement
        (negation)
        (element
          (number))))
    (termination)))
