test/corpus/type-number-exponents-negative-lowercase.txt
===============================================================================
type(number): lowercase negative exponents
===============================================================================
{
    negated_sci = -1.5e10;
    negated_small = -.5e-5;
}
-------------------------------------------------------------------------------
(document
  (field
    (identifier)
    (assignment)
    (element
      (number))
    (termination))
  (field
    (identifier)
    (assignment)
    (element
      (number))
    (termination)))
