test/corpus/type-number-float.txt
===============================================================================
type(number): float
===============================================================================
{
    float = 1400.01467843;
}
-------------------------------------------------------------------------------
(document
  (field
    (identifier)
    (assignment)
    (element
      (number))
    (termination)))
