test/corpus/type-number-integer-negative.txt
===============================================================================
type(number): negative integer
===============================================================================
{
    negative-integer = -1738;
}
-------------------------------------------------------------------------------
(document
  (field
    (identifier)
    (assignment)
    (element
      (number))
    (termination)))
