test/corpus/type-number-integer.txt
===============================================================================
type(number): integer
===============================================================================
{
    integer = 1738;
}
-------------------------------------------------------------------------------
(document
  (field
    (identifier)
    (assignment)
    (element
      (number))
    (termination)))
