test/corpus/type-string-escaped-cr.txt
===============================================================================
type(string): escaped carriage-returns
===============================================================================
{
    name = "\rWill\r";
}
-------------------------------------------------------------------------------
(document
  (field
    (identifier)
    (assignment)
    (element
      (string))
    (termination)))
