test/corpus/type-string-escaped-crlf.txt
===============================================================================
types(string) escaped carriage-return + line-feeds
===============================================================================
{
    name = "\r\nWill\r\n";
}
-------------------------------------------------------------------------------
(document
  (field
    (identifier)
    (assignment)
    (element
      (string))
    (termination)))
