test/corpus/type-string-escaped-lf.txt
===============================================================================
type(string) escaped line-feeds
===============================================================================
{
    name = "\n\nWill\n\n";
}
-------------------------------------------------------------------------------
(document
  (field
    (identifier)
    (assignment)
    (element
      (string))
    (termination)))
