test/corpus/type-string-escaped-lfcr.txt
===============================================================================
type(string): escaped line-feed + carriage-returns
===============================================================================
{
    name = "\n\rWill\n\r";
}
-------------------------------------------------------------------------------
(document
  (field
    (identifier)
    (assignment)
    (element
      (string))
    (termination)))
