test/corpus/type-string-escaped-quotes.txt
===============================================================================
type(string): escaped quotes
===============================================================================
{
    name = "\"Will\"";
    height = "6\'2\"";
}
-------------------------------------------------------------------------------
(document
  (field
    (identifier)
    (assignment)
    (element
      (string))
    (termination))
  (field
    (identifier)
    (assignment)
    (element
      (string))
    (termination)))
