test/corpus/type-string-multiline-escapes.txt
===============================================================================
type(string): multiline with escapes
===============================================================================
{
    greeting = ''
        I
        said
        '''Hello!'''
    '';
}
-------------------------------------------------------------------------------
(document
  (field
    (identifier)
    (assignment)
    (element
      (string))
    (termination)))
