test/corpus/type-string-multiline.txt
===============================================================================
type(string): multiline
===============================================================================
{
    greeting = ''
        Hello
        there!
    '';
}
-------------------------------------------------------------------------------
(document
  (field
    (identifier)
    (assignment)
    (element
      (string))
    (termination)))
