test/corpus/type-string.txt
===============================================================================
type(string)
===============================================================================
{
    name = "Will";
}
-------------------------------------------------------------------------------
(document
  (field
    (identifier)
    (assignment)
    (element
      (string))
    (termination)))
